--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt">
   <head>
+    <link rel="shortcut icon" href="#">
     <meta charset="UTF-8" />
     <meta
       name="viewport"
