--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt">
   <head>
+    <link rel="shortcut icon" href="#">
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1"
     />
     <title>P7 Criativo</title>
-    <script type="module" crossorigin src="/assets/index.d97b43dd.js"></script>
-    <link rel="stylesheet" href="/assets/index.9255885b.css">
+    <script type="module" crossorigin src="/assets/index.b85c3ba5.js"></script>
+    <link rel="stylesheet" href="/assets/index.e457a0e6.css">
   </head>
   <body>
     <div id="root"></div>
