--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt">
-  <head>
-    <link rel="shortcut icon" href="#">
+  <link>
+    <link rel="stylesheet" href="https://cdn.privacytools.com.br/public_api/banner/style/PkQ311219151.css?t=1"/>
+    <link rel="shortcut icon" href="#"/>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1"
     />
+    
     <title>P7 Criativo</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-
+    <script type="text/javascript" src="https://cdn.privacytools.com.br/public_api/banner/script/bottom/PkQ311219151.js?t=1"></script>
   </body>
 </html>
