--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html lang="pt">
   <link>
     <link rel="stylesheet" href="https://cdn.privacytools.com.br/public_api/banner/style/PkQ311219151.css?t=1"/>
-    <link rel="shortcut icon" href="#"/>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1"
     />
-    
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="/img/favicon_io//site.webmanifest">
     <title>P7 Criativo</title>
   </head>
   <body>
