--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1"
     />
-    <link rel="apple-touch-icon" sizes="180x180" href="/LandingP7/img/favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/LandingP7/img/favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/LandingP7/img/favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="/LandingP7/img/favicon_io//site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="./img/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="./img/favicon_io/site.webmanifest">
     <title>P7 Criativo</title>
-    <script type="module" crossorigin src="/LandingP7/assets/index.ee047ddf.js"></script>
-    <link rel="stylesheet" href="/LandingP7/assets/index.62efd81a.css">
+    <script type="module" crossorigin src="./assets/index.2f6c7b74.js"></script>
+    <link rel="stylesheet" href="./assets/index.7070c351.css">
   </head>
   <body>
     <div id="root"></div>
